src/sass/media.sass
$red-color: #FF0000

@media only screen and (max-width : 1920px)

	.videoplayer
		.videoplayer__main
			max-width: 1363px
			width: calc(100% - 394px)
			overflow: hidden
			.videoplayer-img
				width: 100%
				.videoplayer-img__item
					width: 100%
					height: auto
					object-fit: cover

	.content-player
		margin: 55px 205px 55px 0
		max-width: 1120px
		.content-player__image
			width: 540px
			overflow: hidden
			.player-image__pic
				width: 100%
				height: auto
				object-fit: cover
		.content-player__description
			width: calc(100% - 540px)

	.top-navigation
		margin-left: calc(100% - 1298px)

	.content
		width: calc(100% - 315px)

	.main-home
		.content.content_full
			margin-top: 20px	

	.content.content_full
		width: calc(100% - 245px)
		margin: 0 0 0 65px
		overflow: hidden	

	.content-main, .content-top, .content-header
		margin-right: 55px	

@media only screen and (max-width: 1600px)
	.videoplayer
		.videoplayer-summary
			.videoplayer-description
				.videoplayer-description__text
					max-width: 820px
					width: calc(100%)

@media only screen and (max-width : 1440px)

	.content-player
		margin: 60px 60px 60px 0
		.content-player__image
			width: 340px
		.content-player__description
			width: calc(100% - 372px)

	.gallery-header
		padding-right: 5px
		.gallery-header_right
			.gallery-navigation
				margin-left: 20px

	.search
		.search-input
			width: 600px

	.top-navigation
		margin-left: calc(100% - 1068px)

@media only screen and (max-width : 1200px)

	.videoplayer
		margin: 0 30px

	.recommended
		display: none

	.content-main
		width: 100%

	.content-header
		padding: 0 20px

	.search
		.search-input
			width: 300px

	.content
		width: calc(100% - 192px)
		margin: 0

	.videoplayer-controls__item
		transform: scale(1)

	.header
		padding: 20px 30px 30px 30px

	.top-navigation
		margin-left: calc(100% - 668px)	
		margin-right: 20px
		width: 100px

	.content-player
		width: 100%
		padding: 0 20px
		flex-direction: column
		align-items: center
		margin: 60px auto
		.content-player__image
			width: 100%
		.content-player__description
			width: 100%
			padding: 20px 0

@media only screen and (max-width : 992px)

	.videoplayer
		flex-direction: column
		.videoplayer__main
			width: 100%
		.videoplayer__playlist
			margin: 0
			max-width: 367px	

	.gallery-small
		.gallery-small__wrapper
			width: 100%
			flex-wrap: wrap
			justify-content: space-around
			.gallery-small__item
				margin: 0 0 30px 0
				margin-right: 0

	.gallery-medium
		.gallery-medium__wrapper
			width: 100%
			flex-wrap: wrap
			justify-content: space-around
			.gallery-medium__item
				margin: 0 0 30px 0
				width: 500px

	.gallery-header
		padding: 0
		justify-content: space-between
		.gallery-navigation
			display: none	
		.gallery-header__text
			display: none	

	.content-main
		.content-navigation
			display: flex
			padding: 0 16px 16px 
			margin: 0 auto
			.nav-item
				margin-right: 40px
				.nav-item__link
					font-size: 14px
					line-height: 18px
			.nav-item.nav-item_more
				display: flex		
		.content-navigation .nav-item:nth-child(n+5):nth-last-child(n+1)	
			background: red
			display: none	

@media only screen and (max-width : 768px)

	.content__header
		flex-direction: column
		align-items: flex-start
		.content-info
			flex-direction: column
			align-items: flex-start
		.content-subscribe	
			.content-subscribe__icon
				display: none	

	.header
		padding: 10px 16px 20px
		width: 100%
		justify-content: space-between
		.logo
			margin: 0

	.menu
		display: none

	.gallery-medium
		padding: 20px
		width: 100%
		.gallery-medium__wrapper
			width: 100%
			.gallery-medium__item
				width: 100%
				.gallery-medium__thumbnail
					width: 100%
					.gallery-medium__image
						height: 100%
						width: 100%
						object-fit: cover
						object-position: center


	.gallery-header__image
		width: 40px
		height: 40px

	.gallery-header
		.gallery-header__title
			font-size: 18px	

	.top-navigation
		display: none

	.search
		display: none	

	body
		background: #F2F2F2

	.videoplayer
		.videoplayer-main
			.videoplayer-img
				.videoplayer-navigation
					bottom: 8px
					background: transparent
					padding: 0 6px 8px 6px
					height: 30px
					display: flex
					align-items: center
					.videoplayer-progress
						display: flex
						justify-content: center
						padding: 5px 18px
						background: rgba(0, 0, 0, 0.2)
						mix-blend-mode: normal
						border-radius: 10px
						.videoplayer-progress__image
							align-self: center
							width: calc(100% - 165px)
						.videoplayer-progress_left,
						.videoplayer-progress_right
							display: flex
							color: #ffffff
							cursor: pointer	
						.videoplayer-progress_left 
							.videoplayer-progress__control	
								margin-right: 14px
						.videoplayer-progress_right 
							.videoplayer-progress__control
								margin-left: 14px									
					.videoplayer-time
						display: none
					.videoplayer-controls
						display: none	

@media only screen and (max-width : 576px)

	.content.content_full
		margin: 0 0 0 0
		overflow: hidden
		width: 100%	

	.content-main, .content-top, .content-header
		margin-right: 0	

	body
		background: #FFFFFF

	.videoplayer
		.videoplayer-main
			.videoplayer-info__more
				display: block
		.videoplayer-playlist
			margin: 0 auto
		.videoplayer-info
			position: relative
			.videoplayer-title
				width: 210px
				font-size: 20px
				line-height: 25px
				margin-top: 13px
		.videoplayer-summary
			border-bottom: 1px solid rgba(216, 216, 216, 0.5)
			padding: 20px 0
			margin-bottom: 20px
			flex-direction: row
			align-items: center
			.videoplayer-button
				font-size: 16px
				line-height: 20px			
				padding: 0
				background: transparent
				color: $red-color
				.videoplayer-button__count
					display: none
				&:hover
					background: transparent	
					color: $red-color
			.videoplayer-description	
				align-items: center
				.videoplayer-button
					align-self: start
				.videoplayer-description__date
					display: none
				.videoplayer-description__more
					display: none
				.videoplayer-description__image
					height: 50px
					width: 50px
				.videoplayer-description__text
					.videoplayer-description__views
						display: flex
						font-size: 12px
						line-height: 15px					
					.videoplayer-description__summary
						display: none	
					.videoplayer-description__category
						font-size: 16px
						line-height: 20px				
		.videoplayer-navigation
			flex-direction: column
			.videoplayer-navigation__text
				font-size: 12px
				line-height: 15px
				align-self: flex-start
			.videoplayer-navigation__buttons
				margin-top: 20px
				.video-button
					margin-right: 10px
		.videoplayer-more
			display: none												

	.content-header
		padding: 0 16px
		margin: 0
		transform: translateY(-40px)

	.content
		width: 100%
		padding-bottom: 60px
		.content-player
			display: none
	.content-main
		justify-content: center
		.content-wrapper
			overflow: hidden

	.gallery-header
		display: none

	.gallery-small__wrapper, .gallery-medium__wrapper
		flex-direction: column	

	.gallery-small 
		width: 288px
		margin: 0 auto
		.gallery-small__wrapper 
			.gallery-small__item
				margin: 0 0 30px 0
				margin-right: 0
				.gallery-small__thumbnail
					height: 150px
					width: 100% 
					.gallery-small__image
						height: auto
						width: 100%

	.gallery-medium
		width: 288px
		margin: 0 auto
		padding: 0
		.gallery-medium__wrapper 
			.gallery-medium__item
				margin: 0 0 30px 0
				margin-right: 0
				.gallery-medium__thumbnail
					height: 150px
					width: 100% 
					.gallery-medium__image
						height: 100%
						width: auto					
	
	.sidebar
		display: none

	.sidebar__subscriptions
		display: none

	.sidebar-settings
		display: none				

	.sidebar-mobile
		display: flex

	.header.header-home
		.mobile-nav
			display: flex

	.header.header-channel
		.top-userpic, .logo-youtube
			display: none
		.mobile-title
			display: flex

	.header.header-video
		.top-userpic
			display: none

	.header
		.header-content_right
			display: flex
			align-items: center
			.mobile-nav
				width: auto
				margin-right: 25px		

	.header		
		.mobile-nav
			display: flex
			justify-content: space-between
			width: 78px

@media only screen and (max-width : 480px)

	.switch 
		width: 30px
		height: 18px
		margin-left: 11px

	.slider:before 
		position: absolute
		content: ""
		height: 16px
		width: 16px
		left: 1px
		bottom: 1px
		background-color: #CCCCCC
		-webkit-transition: .4s
		transition: .4s

	input:checked + .slider:before
		background-color: #2196F3

	input:focus + .slider 
		box-shadow: 0 0 1px #2196F3

	input:checked + .slider:before 
		-webkit-transform: translateX(12px)
		-ms-transform: translateX(12px)
		transform: translateX(12px)

	.slider.round 
		border-radius: 18px

	.toggle
		.switch-text
			font-size: 10px
			line-height: 13px			

	.videoplayer
		margin: 0 16px
		.videoplayer__playlist
			margin: 0
			width: 100%
			.playlist-header
				.playlist-header__title
					font-size: 20px
					line-height: 25px			
			.playlist-item
				.playlist-item__views,
				.playlist-item__author
					font-size: 13px
					line-height: 16px
				.playlist-item__title
					font-size: 16px
					line-height: 20px				
				.playlist-image__item
					width: 100%
					height: auto
					min-width: 288px
					min-height: 150px

@media only screen and (max-width : 320px)
	.videoplayer
		.videoplayer__playlist
			.playlist-item
				.playlist-image__item
					width: 288px
					height: 150px

@media only screen and (min-width : 1600px)
	.main
		min-height: 1104px

